Leocloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: student-if220129
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/automind-2527/backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5191
      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: student-if220129
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 5191
      targetPort: 5191
      protocol: TCP
