Leocloud/keycloak.yaml
---

# ----------------------------------------
# Keycloak Deployment
# ----------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: student-if220129
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:21.1.1
          args:
            - start-dev
            - --import-realm
            - --http-port=8080
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: keycloak-realm
              mountPath: /opt/keycloak/data/import
              readOnly: true
            - name: keycloak-data
              mountPath: /opt/keycloak/data
            - name: keycloak-theme-automind
              mountPath: /opt/keycloak/themes/automind
              readOnly: true
      volumes:
        - name: keycloak-realm
          secret:
            secretName: keycloak-realm-secret
        - name: keycloak-data
          emptyDir: {}
        - name: keycloak-theme-automind
          configMap:
            name: keycloak-theme-automind
            items:
              - key: theme.properties
                path: login/theme.properties
              - key: login.css
                path: login/resources/css/login.css
---
# ----------------------------------------
# Keycloak Service
# ----------------------------------------
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: student-if220129
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP


# ----------------------------------------
# Keycloak Service
# ----------------------------------------
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: student-if220129
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "24k"
spec:
  ingressClassName: nginx
  rules:
    - host: if220129.cloud.htl-leonding.ac.at
      http:
        paths:
          - path: /keycloak
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
